--- a/packages.bib
+++ b/packages.bib
@@ -31,14 +31,14 @@
   title = {car: Companion to Applied Regression},
   author = {John Fox and Sanford Weisberg and Brad Price},
   year = {2018},
-  note = {R package version 3.0-1},
+  note = {R package version 3.0-2},
   url = {https://CRAN.R-project.org/package=car},
 }
 @Manual{R-carData,
   title = {carData: Companion to Applied Regression Data Sets},
   author = {John Fox and Sanford Weisberg and Brad Price},
   year = {2018},
-  note = {R package version 3.0-1},
+  note = {R package version 3.0-2},
   url = {https://CRAN.R-project.org/package=carData},
 }
 @Manual{R-colorspace,
@@ -59,7 +59,7 @@
   title = {data.table: Extension of `data.frame`},
   author = {Matt Dowle and Arun Srinivasan},
   year = {2018},
-  note = {R package version 1.11.4},
+  note = {R package version 1.11.8},
   url = {https://CRAN.R-project.org/package=data.table},
 }
 @Manual{R-dplyr,
@@ -203,10 +203,10 @@
   url = {https://CRAN.R-project.org/package=nlme},
 }
 @Manual{R-optimx,
-  title = {optimx: A Replacement and Extension of the optim() Function},
+  title = {optimx: Expanded Replacement and Extension of the 'optim' Function},
   author = {John C Nash and Ravi Varadhan},
-  year = {2014},
-  note = {R package version 2013.8.7},
+  year = {2018},
+  note = {R package version 2018-7.10},
   url = {https://CRAN.R-project.org/package=optimx},
 }
 @Manual{R-pander,
@@ -256,7 +256,7 @@ Research},
   title = {sjPlot: Data Visualization for Statistics in Social Science},
   author = {Daniel Lüdecke},
   year = {2018},
-  note = {R package version 2.5.0},
+  note = {R package version 2.6.0},
   url = {https://CRAN.R-project.org/package=sjPlot},
 }
 @Manual{R-sjstats,
@@ -287,6 +287,12 @@ Computations},
   year = {2017},
   note = {R package version 1.36.23},
   url = {https://CRAN.R-project.org/package=texreg},
+}
+@Manual{R-texreghelpr,
+  title = {texreghelpr: Extract Generalized REgression Output for Use in `texreg` tables},
+  author = {Sarah Schwartz},
+  year = {2018},
+  note = {R package version 0.1.0},
 }
 @Manual{R-tibble,
   title = {tibble: Simple Data Frames},
