add texreghelpr functions to glmer

--- a/40_example_gee_Respiratory.Rmd
+++ b/40_example_gee_Respiratory.Rmd
@@ -47,7 +47,7 @@ library(texreghelpr)
 
 ### Read in the data
 
-This data set is in the **HSAUR** package. 
+> This data set is in the **HSAUR** package. 
 
 In each of two centres, eligible patients were randomly assigned to active treatment or placebo. During the treatment, the respiratory status (categorised poor or good) was determined at each of four, monthly visits. The trial recruited 111 participants (54 in the active group, 57 in the placebo group) and there were no missing data for either the responses or the covariates. The question of interest is to assess whether the treatment is effective and to estimate its effect.
 
