--- a/50_example_gee_Epilepsy.Rmd
+++ b/50_example_gee_Epilepsy.Rmd
@@ -46,9 +46,8 @@ library(texreghelpr)
 
 ## Prepare and get to know the dataset
 
-### Read in the data
 
-This data set is in the **HSAUR** package. 
+> This data set is in the **HSAUR** package. 
 
 In this clinical trial, 59 patients suffering from epilepsy were randomized to groups receiving either the anti-epileptic drug "Progabide"" or a placebo in addition to standard chemotherapy. The numbers of seizures suffered in each of four, two-week periods were recorded for each patient along with a baseline seizure count for the 8 weeks prior to being randomized to treatment and age. The main question of interest is whether taking progabide reduced the number of epileptic seizures compared with placebo.
 
@@ -73,6 +72,7 @@ In this clinical trial, 59 patients suffering from epilepsy were randomized to g
     + `base` the number of seizures before the trial (8 weeks)
 
 
+### Read in the data
 
 ```{r}
 data("epilepsy", package = "HSAUR")
